# SmartCS

./: .gitignore  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  前后端对接思路.md  多文档上传与一键入库方案.md  多租户配置管理方案.md  多轮对话智能推荐功能设计.md
SmartCS-frontend/: .dockerignore  Dockerfile  FLOW.md  agent.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  progress.txt  tsconfig.app.json  vite.config.ts
SmartCS-frontend/md/: PRD.md  TECH_STACK.md  UI.md  progress.txt
SmartCS-frontend/src/: main.ts
alembic/: env.py
alembic/versions/: 001_initial.py  003_separate_feedback_table.py  004_change_email_to_username.py  21f926fa027e_add_quota_table.py  2c2b9ab5dc03_add_feedback_fields_to_chat_messages.py
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  nodes.py  state.py
app/api/: admin_auth.py  admin_knowledge.py  chat.py  dependencies.py  knowledge.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  admin.py  chat.py  quota.py
app/schemas/: admin.py  chat.py
app/services/: db_service.py  document_parser.py  llm_service.py  (+2 more)
docs/: API_CONTRACT_AND_DB.md  APP_FLOW.md  BACEND_STRUCTURE.md  IMPLEMENT.md  PRD.md  TECH_STACK.md
scripts/: delete_collection.py  eval_retrieval.py  fix_zombie_tasks.py
test/: chat_test.html  test_api.py  test_chat_stream.py  test_embedding_speed.py  test_feedback.py  test_knowledge_ingest.py  test_llm_embedding.py  test_node_timing.py  test_rag.py  test_sse.py  test_stream_timing.py  test_text_splitter.py
(+18 files in other folders)
